[gd_scene load_steps=3 format=3 uid="uid://cdxr1ejew33ca"]

[ext_resource type="Script" uid="uid://fwj5r3butfjk" path="res://_Scripts/StudentCard.gd" id="1_hlqoc"]
[ext_resource type="Texture2D" uid="uid://x27ixp3ayklw" path="res://_Assets/Art/xsz.png" id="2_nshsm"]

[node name="StudentCard" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hlqoc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 647.0

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="PanelContainer/VBox/HBox"]
layout_mode = 2
texture = ExtResource("2_nshsm")
expand_mode = 3

[node name="VBox" type="VBoxContainer" parent="PanelContainer/VBox/HBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="PanelContainer/VBox/HBox/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "张三"

[node name="RoleLabel" type="Label" parent="PanelContainer/VBox/HBox/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "学生"

[node name="IDLabel" type="Label" parent="PanelContainer/VBox/HBox/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1001"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="PanelContainer/VBox"]
layout_mode = 2
columns = 2

[node name="MoneyLabel" type="Label" parent="PanelContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "5000"

[node name="PrideLabel" type="Label" parent="PanelContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "300"

[node name="SensLabel" type="Label" parent="PanelContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "20
"

[node name="ExecLabel" type="Label" parent="PanelContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1.9"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="StatusTitle" type="Label" parent="PanelContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "status"

[node name="BuffLabel" type="RichTextLabel" parent="PanelContainer/VBox"]
layout_mode = 2
text = "sf"
