extends Control

# --- ç»‘å®š UI èŠ‚ç‚¹ ---
@onready var role_label = $PanelContainer/VBox/HBox/VBox/RoleLabel
@onready var money_label = $PanelContainer/VBox/Grid/MoneyLabel
@onready var pride_label = $PanelContainer/VBox/Grid/PrideLabel
@onready var sens_label = $PanelContainer/VBox/Grid/SensLabel
@onready var exec_label = $PanelContainer/VBox/Grid/ExecLabel
@onready var buff_label = $PanelContainer/VBox/BuffLabel
@onready var avatar = $PanelContainer/VBox/HBox/Avatar

# --- è§’è‰²ä¸­æ–‡åæ˜ å°„ ---
const ROLE_NAMES = {
	"ARCH_ELITE": "åé—¨ä¹‹å",
	"ARCH_LOCAL": "æœ¬åœ°åœŸè‘—",
	"ARCH_SURVIVOR": "å¯’é—¨å­¦å­",
	"ARCH_COUNTY_STAR": "å°é•‡åšé¢˜å®¶", # å¯¹åº”ä½ çš„ COUNTY_STAR
	"ARCH_STRIVER": "å·ç‹ä¹‹ç‹"
}

func _ready():
	# åˆå§‹åŒ–æ—¶åˆ·æ–°ä¸€æ¬¡
	update_display()
	
	# ç›‘å¬ Global é‡Œçš„æ—¶é—´æˆ–å±æ€§å˜åŒ–ä¿¡å·ï¼Œå®ç°è‡ªåŠ¨åˆ·æ–°
	# å¦‚æœ Global æœ‰ signal stats_changedï¼Œè¿™é‡Œ connect ä¸€ä¸‹æœ€å¥½
	# Global.connect("stats_changed", update_display)

# --- æ ¸å¿ƒåˆ·æ–°é€»è¾‘ ---
func update_display():
	# 1. åŸºç¡€ä¿¡æ¯ç¿»è¯‘
	var arch_key = Global.get("current_archetype_key") # å‡è®¾ä½ åœ¨Globalå­˜äº†è¿™ä¸ªå˜é‡
	var role_name = ROLE_NAMES.get(arch_key, "æ™®é€šå¤§å­¦ç”Ÿ")
	role_label.text = "èº«ä»½ï¼š[color=yellow]%s[/color]" % role_name
	
	# 2. å››ç»´å±æ€§å¯è§†åŒ– (å¸¦è§£é‡Š)
	_update_money()
	_update_pride()
	_update_sensitivity()
	_update_execution()
	
	# 3. çŠ¶æ€ä¸ Buff (æœ€é‡è¦çš„ä¸€æ )
	_update_buffs()

# --- è¾…åŠ©å‡½æ•°ï¼šæŠŠæ•°å€¼å˜æˆâ€œäººè¯â€ ---

func _update_money():
	var val = Global.money
	var desc = ""
	if val < 500: desc = "(èµ¤è´«)"
	elif val < 2000: desc = "(æ‹®æ®)"
	elif val > 5000: desc = "(å¯Œè£•)"
	
	money_label.text = "ğŸ’° èµ„é‡‘: %d %s" % [val, desc]
	# èµ¤è´«æ—¶å˜çº¢
	money_label.modulate = Color.RED if val < 500 else Color.WHITE

func _update_pride():
	var val = Global.pride
	var desc = ""
	if val >= 8: desc = "(æ­»è¦é¢å­)" # æç¤ºç©å®¶è¿™ä¼šå¯¼è‡´æ‹’ç»å¸®åŠ©
	elif val <= 2: desc = "(æ¯«æ— åº•çº¿)" # æç¤ºç©å®¶å¯ä»¥åšå‘å¾®çš„äº‹
	else: desc = "(æ­£å¸¸)"
	
	pride_label.text = "ğŸ¦ è‡ªå°Š: %d %s" % [val, desc]

func _update_sensitivity():
	var val = Global.sensitivity
	var desc = ""
	# æ•æ„Ÿåº¦å¤§äº 1.0 æ„å‘³ç€å—åˆ°çš„ Stress ä¼šæ”¾å¤§
	if val > 1.2: 
		desc = "[color=red](é«˜æ•ï¼šå‹åŠ›ä¼¤å®³ +%d%%)[/color]" % [(val - 1.0) * 100]
	elif val < 1.0:
		desc = "[color=green](é’æ„Ÿï¼šå‹åŠ›ä¼¤å®³ -%d%%)[/color]" % [(1.0 - val) * 100]
	else:
		desc = "(æ­£å¸¸)"
		
	sens_label.text = "ğŸ’” æ•æ„Ÿåº¦: %.1f %s" % [val, desc]

func _update_execution():
	var val = Global.base_exec
	var desc = ""
	# åŸºç¡€æ‰§è¡ŒåŠ›å½±å“åšäº‹æ•ˆç‡
	if val > 1.0:
		desc = "[color=green](é«˜æ•ˆï¼šåŸºç¡€äº§å‡º +%d%%)[/color]" % [(val - 1.0) * 100]
	elif val < 1.0:
		desc = "[color=red](ä½æ•ˆï¼šåŸºç¡€äº§å‡º -%d%%)[/color]" % [(1.0 - val) * 100]
	
	exec_label.text = "âš¡ åŸºç¡€è¡ŒåŠ¨åŠ›: %.1f %s" % [val, desc]

func _update_buffs():
	# è·å– Global è®¡ç®—å¥½çš„ç»¼åˆæ•ˆç‡
	var eff_data = Global.get_efficiency()
	var final_eff = eff_data["value"]
	var factors = eff_data["desc"] # Global é‡Œè¿”å›çš„ "å®‰é€¸è¯…å’’, åº§ä½åŠ æˆ" ç­‰å­—ç¬¦ä¸²
	
	var text = ""
	
	# æ˜¾ç¤ºå½“å‰ç»¼åˆå€ç‡
	text += "ğŸ“Š [b]å½“å‰ç»¼åˆæ•ˆç‡: %d%%[/b]\n" % (final_eff * 100)
	
	# é€è¡Œè§£é‡ŠåŸå› 
	if factors != "æ­£å¸¸":
		text += "[color=gray]ç”Ÿæ•ˆå› å­ï¼š[/color]\n"
		# æˆ‘ä»¬å¯ä»¥ç®€å•è§£æ Global è¿”å›çš„å­—ç¬¦ä¸²ï¼Œæˆ–è€…ç›´æ¥æ˜¾ç¤º
		text += " â€¢ " + factors.replace(", ", "\n â€¢ ")
	else:
		text += "[color=gray]æ— ç‰¹æ®ŠçŠ¶æ€ä¿®æ­£[/color]"
		
	# æ˜¾ç¤ºç‰¹è´¨ (Traits)
	text += "\n\nğŸ·ï¸ [b]äººç‰©ç‰¹è´¨:[/b]\n"
	if Global.traits.size() > 0:
		for t in Global.traits:
			text += " [%s] " % t
	else:
		text += " (æ— )"
		
	buff_label.text = text
